--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
        </li>
          <li>
          <a href="https://tkveiculosma.com.br/"
-         target="_blank"><img src="img/logo.jpeg" alt="">Estoque TK Veículos</a>
+         target="_blank"><img src="img/logoo.svg" alt="">Estoque TK Veículos</a>
        </li>
 
        
