--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
        </li> -->
 
        <li>
-         <a href="https://tkpremios.net/campanha/hb20s-16-aut-ou-50k-no-pix"
-         target="_blank"><img src="img/dinheiro.svg" alt=""> Compre aqui apenas 0,20 centavos</a>
+         <a href="https://tkpremios.net/campanha/honda-cb-650f"
+         target="_blank"><img src="img/dinheiro.svg" alt=""> Honda CB 650F - Apenas 0,10 centavos</a>
        </li>
 
         <li>
